welcome.lessons.welcome.bat.bool2.NearTen.scala.code
def nearTen(num:Int):Boolean = {
	return Maths.abs(num % 10) <= 2
}
